--- a/.env
+++ b/.env
@@ -14,4 +14,5 @@ JWT_EXPIRES_IN=7d
 # Server Configuration
 PORT=5000
 NODE_ENV=development
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=https://eczema-dashboard-final.vercel.app
+
