--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
-# Database Configuration
+# MongoDB Configuration
 MONGODB_URI=mongodb+srv://admin:0754092850@todoapp.aqby3.mongodb.net/TRY?retryWrites=true&w=majority&ssl=true
 
-# MySQL Configuration
-MYSQL_HOST=localhost
+# MySQL Configuration (Updated for Railway)
+MYSQL_HOST=centerbeam.proxy.rlwy.net
+MYSQL_PORT=17053
 MYSQL_USER=root
-MYSQL_PASSWORD=
-MYSQL_DATABASE=eczema
+MYSQL_PASSWORD=xmFjYAcsjbnLaJXMdiuYhEnZDkpNerWy
+MYSQL_DATABASE=railway
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret
@@ -15,4 +16,3 @@ JWT_EXPIRES_IN=7d
 PORT=5000
 NODE_ENV=development
 CLIENT_URL=https://eczema-dashboard-final.vercel.app
-
