--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "setup": "npm run init-db && npm run seed"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-converter": "^4.22.0",
+    "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
     "exceljs": "^4.4.0",
+    "express": "^4.21.2",
+    "form-data": "^4.0.2",
     "helmet": "^8.1.0",
     "json2csv": "^5.0.7",
     "jsonwebtoken": "^9.0.2",
@@ -32,13 +36,15 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
     "supertest": "^6.3.4"
   },
   "jest": {
     "testEnvironment": "node",
-    "setupFilesAfterEnv": ["./tests/setup.js"],
+    "setupFilesAfterEnv": [
+      "./tests/setup.js"
+    ],
     "testTimeout": 10000
   }
 }
