--- a/.env
+++ b/.env
@@ -16,3 +16,6 @@ JWT_EXPIRES_IN=7d
 PORT=5000
 NODE_ENV=development
 CLIENT_URL=https://eczema-dashboard-final.vercel.app
+
+# ML API Configuration
+ML_API_URL=http://localhost:5001
