--- a/.env
+++ b/.env
@@ -18,4 +18,4 @@ NODE_ENV=development
 CLIENT_URL=https://eczema-dashboard-final.vercel.app
 
 # ML API Configuration
-ML_API_URL=http://172.50.1.37:5001
+ML_API_URL=https://eczema-model.onrender.com
