'https://ml-api-213769180782.us-central1.run.app/predict' \ "'

--- a/.env
+++ b/.env
@@ -18,4 +18,5 @@ NODE_ENV=development
 CLIENT_URL=https://eczema-dashboard-final.vercel.app
 
 # ML API Configuration
-ML_API_URL=https://eczema-model.onrender.com
+ML_API_URL=https://ml-api-213769180782.us-central1.run.app/predict
+
