--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
@@ -31,6 +32,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.14.0",
+    "pdfkit": "^0.14.0",
+    "sequelize": "^6.37.1",
     "sharp": "^0.33.5",
     "socket.io": "^4.7.4",
     "uuid": "^11.1.0",
