--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "form-data": "^4.0.2",
     "helmet": "^8.1.0",
     "json2csv": "^5.0.7",
