--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 # MongoDB Configuration
-MONGODB_URI=mongodb+srv://admin:0754092850@todoapp.aqby3.mongodb.net/TRY?retryWrites=true&w=majority&ssl=true
+MONGODB_URI=mongodb://localhost:27017/eczema_dev
 
 # MySQL Configuration (Updated for Railway)
-MYSQL_HOST=centerbeam.proxy.rlwy.net
-MYSQL_PORT=17053
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
 MYSQL_USER=root
-MYSQL_PASSWORD=xmFjYAcsjbnLaJXMdiuYhEnZDkpNerWy
-MYSQL_DATABASE=railway
+MYSQL_PASSWORD=
+MYSQL_DATABASE=eczema_dev
 
 # JWT Configuration
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=your-super-secret-jwt-key-2024
 JWT_EXPIRES_IN=7d
 
 # Server Configuration
@@ -20,4 +20,4 @@ CLIENT_URL=https://eczema-dashboard-final.vercel.app
 # ML API Configuration
 ML_API_URL=https://ml-api-213769180782.us-central1.run.app
 
-FORCE_SYNC=false
+FORCE_SYNC=true
