--- a/.env
+++ b/.env
@@ -20,4 +20,4 @@ CLIENT_URL=https://eczema-dashboard-final.vercel.app
 # ML API Configuration
 ML_API_URL=https://ml-api-213769180782.us-central1.run.app
 
-FORCE_SYNC=false
+FORCE_SYNC=true
