--- a/.env
+++ b/.env
@@ -21,3 +21,8 @@ CLIENT_URL=https://eczema-dashboard-final.vercel.app
 ML_API_URL=https://ml-api-213769180782.us-central1.run.app
 
 FORCE_SYNC=true
+
+
+GOOGLE_CLOUD_KEY_FILE=./config/my-storage-project-457114-e635fd14afab.json
+GOOGLE_CLOUD_PROJECT_ID=my-storage-project-457114
+GOOGLE_CLOUD_BUCKET_NAME=myapp-images-2025
