--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "setup": "npm run init-db && npm run seed"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.16.0",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-converter": "^4.22.0",
     "axios": "^1.8.4",
