--- a/.env
+++ b/.env
@@ -26,3 +26,6 @@ FORCE_SYNC=true
 GOOGLE_CLOUD_KEY_FILE=./config/my-storage-project-457114-e635fd14afab.json
 GOOGLE_CLOUD_PROJECT_ID=my-storage-project-457114
 GOOGLE_CLOUD_BUCKET_NAME=myapp-images-2025
+GOOGLE_CLOUD_CREDENTIALS={
+    "type": "service_account",
+                
