--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MongoDB Configuration
-MONGODB_URI=mongodb://localhost:27017/eczema_dev
+MONGODB_URI=mongodb+srv://admin:0754092850@todoapp.aqby3.mongodb.net/TRY?retryWrites=true&w=majority&ssl=true
 
 # MySQL Configuration (Updated for Railway)
 MYSQL_HOST=centerbeam.proxy.rlwy.net
