--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
+    "winston": "^3.17.0",
     "ws": "^8.18.1"
   },
   "devDependencies": {
