--- a/.env
+++ b/.env
@@ -1,11 +1,19 @@
 # MongoDB Configuration
 MONGODB_URI=mongodb+srv://admin:0754092850@todoapp.aqby3.mongodb.net/TRY?retryWrites=true&w=majority&ssl=true
 
-# MySQL Configuration (Updated for Railway)
-MYSQL_HOST=centerbeam.proxy.rlwy.net
-MYSQL_PORT=317053
+# # MySQL Configuration (Updated for Railway)
+# MYSQL_HOST=centerbeam.proxy.rlwy.net
+# MYSQL_PORT=317053
+# MYSQL_USER=root
+# MYSQL_PASSWORD=xmFjYAcsjbnLaJXMdiuYhEnZDkpNerWy
+# MYSQL_DATABASE=railway
+
+
+
+MYSQL_HOST=turntable.proxy.rlwy.net
+MYSQL_PORT=47914
 MYSQL_USER=root
-MYSQL_PASSWORD=xmFjYAcsjbnLaJXMdiuYhEnZDkpNerWy
+MYSQL_PASSWORD=iloVnaEyMEYXFFknMevATgzYZpFCEobd
 MYSQL_DATABASE=railway
 
 # JWT Configuration
