--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "sequelize-cli": "^6.6.3",
     "supertest": "^6.3.4"
   },
   "jest": {
