--- a/.env
+++ b/.env
@@ -20,6 +20,16 @@ MYSQL_DATABASE=railway
 JWT_SECRET=your-super-secret-jwt-key-2024
 JWT_EXPIRES_IN=7d
 
+#SMTP Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=vierycalliper@gmail.com
+SMTP_PASS=pvmk dfrt fvsj adqq
+SMTP_FROM="Eczema App <vierycalliper@gmail.com>"
+FRONTEND_URL=https://eczema-dashboard-final.vercel.app
+
+
+
 # Server Configuration
 PORT=5000
 NODE_ENV=development
