--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.14.0",
+    "nodemailer": "^7.0.3",
     "pdfkit": "^0.14.0",
     "sequelize": "^6.37.1",
     "sharp": "^0.33.5",
